# Sylvi

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
src/: __init__.py  bot.py  config.py  prompts.py
src/bot/: __init__.py  handlers.py  helpers.py  main.py  workers.py
src/ingestion/: graph.py  nodes.py  state.py
src/memory/: profile.py
src/query/: __init__.py  graph.py  nodes.py  state.py
src/services/: __init__.py  llm.py  scrapers.py  search.py  vector_db.py
tests/: test_ingestion.py  test_profile_db.py  test_query.py
