[project]
name = "Sylvi"
version = "0.1.0"
description = "Sylvi is a multimodal, stateful memory copilot designed to act as an extension of your digital mind."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pillow>=12.2.0",
    "pinecone>=9.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "readability-lxml>=0.8.4.1",
]
[tool.pyrefly]
search_path = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
